--- a/pom.xml
+++ b/pom.xml
@@ -707,7 +707,7 @@
 
     <inceptionYear>2017</inceptionYear>
     <organization>
-        <name>Tock.ai</name>
+        <name>Tock</name>
     </organization>
     <developers>
         <developer>
