--- a/docs-mk/en/mkdocs.yml
+++ b/docs-mk/en/mkdocs.yml
@@ -1,9 +1,9 @@
 site_name: 'Tock'
 site_description: 'Build assistants & chatbots with ease.'
-site_author: 'VSCT'
-site_url: 'https://voyages-sncf-technologies.github.io/tock/en'
+site_author: 'Tock'
+site_url: 'https://theopenconversationkit.github.io/tock/en'
 repo_name: 'tock'
-repo_url: 'https://github.com/voyages-sncf-technologies/tock'
+repo_url: 'https://github.com/theopenconversationkit/tock'
 edit_uri: ''
 nav:
   - 'Overview': 'index.md'
@@ -53,8 +53,8 @@ markdown_extensions:
   - codehilite
   - toc:
       permalink: true
-copyright: 'Copyright &copy; 2017/2019 VSCT'
+copyright: 'Copyright &copy; 2017/2019 Tock'
 extra:
   social:
     - type: 'github'
-      link: 'https://github.com/voyages-sncf-technologies/tock'
+      link: 'https://github.com/theopenconversationkit/tock'
