--- a/bot/dialogflow/pom.xml
+++ b/bot/dialogflow/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.9.0-SNAPSHOT</version>
+        <version>19.9.0</version>
     </parent>
 
     <artifactId>tock-nlp-dialogflow</artifactId>
