resolves #621 business chat: cleanup connector code
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-businesschat/pom.xml
+++ b/bot/connector-businesschat/pom.xml
@@ -16,6 +16,14 @@
             <groupId>ai.tock</groupId>
             <artifactId>tock-bot-engine-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
