Doc: replace untranslated content with old pages (en)
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/docs-mk/en/mkdocs.yml
+++ b/docs-mk/en/mkdocs.yml
@@ -7,33 +7,17 @@ repo_url: 'https://github.com/theopenconversationkit/tock'
 edit_uri: ''
 nav:
   - 'Overview': 'index.md'
-  - 'Table of contents': 'toc.md'
-  - 'Try Tock': # Guides / Découvrir
-      - 'Create your first bot': 'guide/studio.md'
-      - 'Configure Slack': 'guide/slack.md'
-      - 'Configure Messenger': 'guide/messenger.md'
-      - 'Program stories': 'guide/api.md'
-      - 'Deploy with Docker': 'guide/platform.md'
-  - 'Use Tock':
-      - 'Concepts': 'utilisateur/concepts.md'
-      - 'Tock Studio': 'utilisateur/studio.md'
-      - 'Multichannel bot': 'utilisateur/channels.md'
-      - 'Multilingual bot': 'utilisateur/i18n.md'
-  - 'Develop with Tock':
-      - 'Availables modes': 'dev/modes.md'
-      - 'Tock Bot API': 'dev/bot-api.md'
-      - 'Tock Integrated Bot': 'dev/integrated-bot.md'
-      - 'Connectors': 'dev/connecteurs.md'
-      - 'i18n': 'dev/i18n.md'
-      - 'APIs': 'dev/api.md'
-      - 'Code samples': 'dev/exemples-code.md'
-  - 'Run Tock':
-      - 'Architecture': 'admin/architecture.md'
-      - 'Installation': 'admin/installation.md'
-      - 'Security': 'admin/security.md'
-      - 'Availability': 'admin/availability.md'
-      - 'Monitoring': 'admin/monitoring.md'
-      - 'Cloud': 'admin/cloud.md'
+  - 'TLDR;': 'getting-started.md'
+  - 'Try Tock Studio':
+    - 'Create your 1st bot': 'guide/studio.md'
+    - 'Build NLP models': 'build-nlp-model.md'
+    - 'Monitor NLP models': 'evaluate-the-model.md'
+  - 'Develop Stories':
+    - 'Bot API mode': 'code-a-bot.md'
+    - 'Integrated Bot mode': 'the-open-data-bot.md'
+    - 'Multilingual (i18n)': 'i18n.md'
+    - 'APIs': 'api.md'
+    - 'KDoc': 'kdoc.md'
   - 'About':
       - 'Why Tock': 'about/why.md'
       - 'Showcase': 'about/showcase.md'
