--- a/bot/connector-teams/pom.xml
+++ b/bot/connector-teams/pom.xml
@@ -31,8 +31,7 @@
     <properties>
         <microsoft.bot>4.0.0-a1</microsoft.bot>
         <mockwebserver>4.2.0</mockwebserver>
-        <nimbus-jose-jwt.version>7.8</nimbus-jose-jwt.version>
-        <couroutine.version>1.3.2</couroutine.version>
+        <nimbus-jose-jwt>7.8</nimbus-jose-jwt>
     </properties>
 
     <dependencies>
@@ -43,12 +42,11 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
-            <version>${couroutine.version}</version>
         </dependency>
         <dependency>
             <groupId>com.nimbusds</groupId>
             <artifactId>nimbus-jose-jwt</artifactId>
-            <version>${nimbus-jose-jwt.version}</version>
+            <version>${nimbus-jose-jwt}</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.bot.schema</groupId>
