--- a/bot/admin/test/core/pom.xml
+++ b/bot/admin/test/core/pom.xml
@@ -31,6 +31,10 @@
     <dependencies>
         <dependency>
             <groupId>ai.tock</groupId>
+            <artifactId>tock-nlp-admin-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ai.tock</groupId>
             <artifactId>tock-bot-engine</artifactId>
         </dependency>
         <dependency>
