fixes #641 bot api: allow only registered custom message
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/api/model/pom.xml
+++ b/bot/api/model/pom.xml
@@ -38,6 +38,12 @@
             <groupId>ai.tock</groupId>
             <artifactId>tock-bot-engine</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
