--- a/bot/toolkit/pom.xml
+++ b/bot/toolkit/pom.xml
@@ -113,7 +113,7 @@
                 </executions>
                 <configuration>
                     <jdkVersion>8</jdkVersion>
-                    <reportNotDocumented>false</reportNotDocumented>
+                    <reportUndocumented>false</reportUndocumented>
                     <sourceDirectories>
                         <dir>${project.basedir}/../toolkit-base/src/main/kotlin</dir>
                     </sourceDirectories>
