--- a/stt/core/pom.xml
+++ b/stt/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-stt</artifactId>
-        <version>19.9.1-SNAPSHOT</version>
+        <version>19.9.1</version>
     </parent>
 
     <artifactId>tock-stt-core</artifactId>
