--- a/bot/connector-rocketchat/pom.xml
+++ b/bot/connector-rocketchat/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.9.1</version>
+        <version>19.9.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-connector-rocketchat</artifactId>
