--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -156,6 +156,10 @@
         </dependency>
         <dependency>
             <groupId>io.vertx</groupId>
+            <artifactId>vertx-auth-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.vertx</groupId>
             <artifactId>vertx-auth-jwt</artifactId>
             <scope>provided</scope>
         </dependency>
