resolves #672 add detailed healthcheck response
toggled by tock_detailed_healthcheck_enabled env var

Add maven dependency vertx-codegen
needed to fix travis CI

📈Add database ping to healthchecks

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,12 @@
                 <artifactId>vertx-auth-oauth2</artifactId>
                 <version>${vertx}</version>
             </dependency>
+            <dependency>
+                <groupId>io.vertx</groupId>
+                <artifactId>vertx-codegen</artifactId>
+                <version>${vertx}</version>
+                <scope>test</scope>
+            </dependency>
 
             <dependency>
                 <groupId>org.litote.kmongo</groupId>
