--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ branches:
   only:
     - master
     - /^build-.*$/
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -q
 script: ./etc/deploy.sh
 cache:
   directories:
