skip mongo test logging
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - master
     - /^build-.*$/
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -q
+install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 script: ./etc/deploy.sh
 cache:
   directories:
