--- a/bot/dialogflow/pom.xml
+++ b/bot/dialogflow/pom.xml
@@ -29,8 +29,8 @@
     <description>DialogFlow Client for Tock NLP API</description>
 
     <properties>
-        <dialogflow>0.115.0-alpha</dialogflow>
-        <google.oauth2>0.18.0</google.oauth2>
+        <dialogflow>0.119.0</dialogflow>
+        <google.oauth2>0.19.0</google.oauth2>
     </properties>
 
     <dependencies>
