--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -44,6 +44,7 @@
         <module>connector-teams</module>
         <module>connector-businesschat</module>
         <module>connector-web</module>
+        <module>xray</module>
 
         <module>dialogflow</module>
 
@@ -64,6 +65,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>ai.tock</groupId>
+                <artifactId>tock-xray-plugin</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>ai.tock</groupId>
                 <artifactId>tock-bot-engine-jackson</artifactId>
