try fo fix build without output
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
     - master
     - /^build-.*$/
 install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-script: ./etc/deploy.sh
+script: travis_wait ./etc/deploy.sh
 cache:
   directories:
   - $HOME/.m2/repository
