--- a/bot/xray/pom.xml
+++ b/bot/xray/pom.xml
@@ -20,7 +20,7 @@
 
     <parent>
         <groupId>ai.tock</groupId>
-        <artifactId>tock-root</artifactId>
+        <artifactId>tock-bot</artifactId>
         <version>19.9.3-SNAPSHOT</version>
     </parent>
 
