--- a/bot/api/websocket-base/pom.xml
+++ b/bot/api/websocket-base/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot-api</artifactId>
-        <version>19.9.3</version>
+        <version>19.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot-api-websocket-base</artifactId>
