--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>19.9.3</version>
+        <version>19.9.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>tock-bot</artifactId>
