--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
 
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
         <node>v10.16.3</node>
     </properties>
 
