resolves #806 Simplify image generation from SVG template

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -239,6 +239,32 @@
             <artifactId>kmongo-flapdoodle</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!--******************************* SVG **********************************-->
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-transcoder</artifactId>
+            <version>${batik}</version>
+            <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>fop</artifactId>
+                    <groupId>fop</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-codec</artifactId>
+            <version>${batik}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-dom</artifactId>
+            <version>${batik}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
