--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <httpclient>4.5.11</httpclient>
         <google-auth2>0.20.0</google-auth2>
         <simmetrics>4.1.1</simmetrics>
+        <batik>1.12</batik>
 
         <junit-jupiter>5.6.0</junit-jupiter>
 
