--- a/bot/chatbase/pom.xml
+++ b/bot/chatbase/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>ai.tock</groupId>
-        <version>19.9.4</version>
+        <version>19.9.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
