--- a/bot/connector-web/pom.xml
+++ b/bot/connector-web/pom.xml
@@ -34,6 +34,15 @@
         </dependency>
 
         <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo-async</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>ai.tock</groupId>
             <artifactId>tock-shared</artifactId>
             <type>test-jar</type>
