--- a/pom.xml
+++ b/pom.xml
@@ -31,16 +31,16 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.3.70</kotlin>
-        <couroutine>1.3.4</couroutine>
+        <kotlin>1.3.71</kotlin>
+        <couroutine>1.3.5</couroutine>
 
         <slf4j>1.7.29</slf4j>
         <logback>1.2.3</logback>
 
-        <kotlin-logging>1.7.8</kotlin-logging>
+        <kotlin-logging>1.7.9</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.12.2</kmongo>
+        <kmongo>4.0.0</kmongo>
         <jackson>2.10.3</jackson>
         <jackson-databind>2.10.3</jackson-databind>
         <jackson-module>2.10.3</jackson-module>
@@ -48,9 +48,9 @@
         <jackson-data>0.1.0</jackson-data>
         <jackson-generator>0.3.1</jackson-generator>
         <klaxon>5.2</klaxon>
-        <vertx>3.8.5</vertx>
-        <retrofit>2.7.2</retrofit>
-        <okhttp>4.4.0</okhttp>
+        <vertx>3.9.0</vertx>
+        <retrofit>2.8.1</retrofit>
+        <okhttp>4.5.0</okhttp>
         <okhttp-signpost>1.1.0</okhttp-signpost>
         <signpost-core>1.2.1.2</signpost-core>
         <circuitbreaker>1.3.1</circuitbreaker>
@@ -60,23 +60,23 @@
         <commons-csv>1.8</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.14</commons-codec>
-        <commons-lang>3.9</commons-lang>
+        <commons-lang>3.10</commons-lang>
         <json>20190722</json>
         <httpclient>4.5.12</httpclient>
         <google-auth2>0.20.0</google-auth2>
         <simmetrics>4.1.1</simmetrics>
         <batik>1.12</batik>
 
-        <junit-jupiter>5.6.0</junit-jupiter>
+        <junit-jupiter>5.6.1</junit-jupiter>
 
         <mockk>1.9.3</mockk>
         <assertj>3.12.2</assertj>
-        <byte-buddy>1.10.8</byte-buddy>
+        <byte-buddy>1.10.9</byte-buddy>
         <atrium>0.8.0</atrium>
 
         <plugin.surefire>3.0.0-M4</plugin.surefire>
         <plugin.source>3.2.1</plugin.source>
-        <plugin.release>2.5.3</plugin.release>
+        <plugin.release>3.0.0-M1</plugin.release>
         <plugin.gpg>1.6</plugin.gpg>
         <plugin.nexus-staging>1.6.8</plugin.nexus-staging>
         <plugin.dokka>0.10.1</plugin.dokka>
@@ -86,7 +86,7 @@
         <plugin.jar>3.2.0</plugin.jar>
         <plugin.ant>1.8</plugin.ant>
         <plugin.shade>3.2.2</plugin.shade>
-        <plugin.dependency>3.1.1</plugin.dependency>
+        <plugin.dependency>3.1.2</plugin.dependency>
         <plugin.deploy>3.0.0-M1</plugin.deploy>
 
         <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
