--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-bot</artifactId>
-        <version>19.9.5-SNAPSHOT</version>
+        <version>20.3.0</version>
     </parent>
 
     <artifactId>tock-bot-engine</artifactId>
