--- a/nlp/core/shared/pom.xml
+++ b/nlp/core/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>19.9.5-SNAPSHOT</version>
+        <version>20.3.0</version>
     </parent>
 
     <artifactId>tock-nlp-core-shared</artifactId>
