--- a/stt/pom.xml
+++ b/stt/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-root</artifactId>
-        <version>19.9.5-SNAPSHOT</version>
+        <version>20.3.0</version>
     </parent>
 
     <artifactId>tock-stt</artifactId>
