Fix #879 - Now using maven-assembly specific configuration to merge MetaInf-services files for jar with dependencies packaged version (NLP-API service)

--- a/nlp/api/service/pom.xml
+++ b/nlp/api/service/pom.xml
@@ -84,9 +84,9 @@
                                     </mainClass>
                                 </manifest>
                             </archive>
-                            <descriptorRefs>
-                                <descriptorRef>jar-with-dependencies</descriptorRef>
-                            </descriptorRefs>
+                            <descriptors>
+                                <descriptor>src/assembly/jar-with-dependencies.xml</descriptor>
+                            </descriptors>
                         </configuration>
                     </execution>
                 </executions>
