resolves #882 front dev mode: add dev angular environment
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/angular.json
+++ b/bot/admin/web/angular.json
@@ -64,6 +64,14 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev.ts"
+                }
+              ]
             }
           }
         },
@@ -75,6 +83,9 @@
           "configurations": {
             "production": {
               "browserTarget": "bot:build:production"
+            },
+            "dev": {
+              "browserTarget": "bot:build:dev"
             }
           }
         },
