--- a/nlp/core/pom.xml
+++ b/nlp/core/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>ai.tock</groupId>
         <artifactId>tock-nlp</artifactId>
-        <version>20.3.1-SNAPSHOT</version>
+        <version>20.3.1</version>
     </parent>
 
     <artifactId>tock-nlp-core</artifactId>
