--- a/bot/admin/web/package.json
+++ b/bot/admin/web/package.json
@@ -13,84 +13,81 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
-    "@angular/animations": "^8.2.5",
-    "@angular/cdk": "^8.0.0",
-    "@angular/common": "^8.2.5",
-    "@angular/compiler": "^8.2.5",
-    "@angular/core": "^8.2.5",
-    "@angular/forms": "^8.2.5",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "^8.2.5",
-    "@angular/platform-browser-dynamic": "^8.2.5",
-    "@angular/router": "^8.2.5",
-    "@nebular/eva-icons": "4.2.1",
-    "@nebular/theme": "4.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@angular/animations": "^9.1.4",
+    "@angular/cdk": "^9.2.2",
+    "@angular/common": "^9.1.4",
+    "@angular/compiler": "^9.1.4",
+    "@angular/core": "^9.1.4",
+    "@angular/forms": "^9.1.4",
+    "@angular/material": "^9.2.2",
+    "@angular/platform-browser": "^9.1.4",
+    "@angular/platform-browser-dynamic": "^9.1.4",
+    "@angular/router": "^9.1.4",
+    "@nebular/eva-icons": "5.0.0",
+    "@nebular/theme": "5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "ang-jsoneditor": "^1.8.4",
     "angular-file-saver": "^1.1.3",
-    "bootstrap": "4.3.1",
-    "chart.js": "^2.7.1",
-    "ckeditor": "^4.12.1",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
+    "ckeditor4": "^4.12.1",
     "classlist.js": "1.1.20150312",
-    "core-js": "^2.5.4",
-    "cytoscape": "^3.2.0",
-    "cytoscape-cola": "^2.3.0",
-    "cytoscape-cose-bilkent": "^4.0.0",
-    "cytoscape-dagre": "^2.2.2",
-    "cytoscape-elk": "^1.1.10",
-    "echarts": "^4.0.2",
-    "eva-icons": "^1.1.0",
-    "hammerjs": "^2.0.8",
+    "core-js": "^2.6.11",
+    "cytoscape": "^3.14.2",
+    "cytoscape-cola": "^2.3.1",
+    "cytoscape-cose-bilkent": "4.0.0",
+    "cytoscape-dagre": "^1.1.10",
+    "echarts": "^4.7.0",
+    "eva-icons": "^1.1.3",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "jsoneditor": "^7.5.0",
     "leaflet": "1.2.0",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "2.24.0",
     "nebular-icons": "1.1.0",
-    "ng2-charts": "^1.6.0",
-    "ng2-ckeditor": "^1.2.3",
-    "ng2-completer": "^3.0.2",
-    "ng2-file-upload": "^1.3.0",
-    "ng2-smart-table": "1.5.0",
-    "ngx-echarts": "^4.0.1",
+    "ng2-charts": "^2.3.0",
+    "ng2-ckeditor": "^1.2.7",
+    "ng2-completer": "^3.0.3",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-echarts": "^4.2.2",
     "ngx-infinite-scroll": "^8.0.2",
-    "ngx-moment": "^3.1.0",
-    "node-sass": "^4.12.0",
+    "ngx-moment": "^3.5.0",
+    "node-sass": "^4.14.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
-    "rxjs": "6.5.2",
+    "rxjs": "6.5.5",
     "rxjs-compat": "6.3.0",
-    "rxjs-tslint": "^0.1.5",
+    "rxjs-tslint": "^0.1.8",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "typeface-exo": "0.0.22",
-    "web-animations-js": "2.2.5",
-    "zone.js": "~0.9.1"
+    "web-animations-js": "^2.3.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.2",
-    "@angular/cli": "^8.3.3",
-    "@angular/compiler-cli": "^8.2.4",
-    "@angular/language-service": "^8.2.4",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "^9.1.4",
+    "@angular/compiler-cli": "^9.1.4",
+    "@angular/language-service": "^9.1.4",
     "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
+    "karma": "^5.0.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
-    "stylelint": "7.13.0",
+    "protractor": "^6.0.0",
+    "stylelint": "^13.3.3",
     "ts-node": "3.2.2",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.1",
     "tslint-language-service": "^0.9.9",
-    "typescript": "3.4.5"
+    "typescript": "3.8.3"
   }
 }
