--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - master
     - /^build-.*$/
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -T 2C -B -V
+install: mvn --version
 script: travis_wait 30 ./etc/deploy.sh
 cache:
   directories:
