--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
   only:
     - master
     - /^build-.*$/
-install: mvn versions:display-dependency-updates
+install: mvn versions:display-property-updates --projects .
 script: travis_wait 40 ./etc/deploy.sh
 cache:
   directories:
